--- a/sprint1.ipynb
+++ b/sprint1.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from alpha_vantage.timeseries import TimeSeries\n",
+    "from alpha_vantage.timeseries import TimeSeries # type: ignore\n",
     "\n",
     "ts = TimeSeries(key='sua_chave_api')\n",
     "data, meta_data = ts.get_intraday(symbol='PETR4.SA', interval='1min', outputsize='full')\n"
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importando blibliotecas para exibir gráficos para testes da apelido\n",
+    "#importando blibliotecas para exibir gráficos para testes\n",
     "import plotly.graph_objs as go"
    ]
   },
@@ -321,7 +321,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 11:26:24.828 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
+      "2024-07-29 08:07:28.614 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
      ]
     }
    ],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,19 +372,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 11:30:17.697 \n",
+      "2024-07-29 08:14:09.368 \n",
       "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
       "  command:\n",
       "\n",
       "    streamlit run c:\\Users\\vasco\\anaconda3\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n",
-      "2024-07-27 11:30:17.698 Session state does not function when running a script without `streamlit run`\n"
+      "2024-07-29 08:14:09.370 Session state does not function when running a script without `streamlit run`\n"
      ]
     }
    ],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "DeltaGenerator()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,14 +428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-27 11:30:34.798 No runtime found, using MemoryCacheStorageManager\n"
+      "2024-07-29 08:18:18.939 No runtime found, using MemoryCacheStorageManager\n"
      ]
     }
    ],
