melhorando a interface gráfica

--- a/sprint3.ipynb
+++ b/sprint3.ipynb
@@ -28,45 +28,52 @@
     }
    ],
    "source": [
-    "#importando a biblioteca do yahoo finance\n",
+    "# Importando as bibliotecas necessárias\n",
     "import yfinance as yf\n",
-    "\n",
-    "#importando a biblioteca streamlit e atribuindo o apelido \"st\"\n",
     "import streamlit as st\n",
-    "\n",
-    "#bliblioteca responsável pela atualização automática da página web\n",
     "from streamlit_autorefresh import st_autorefresh\n",
-    "\n",
-    "#importando blibliotecas para exibir gráficos\n",
     "import plotly.graph_objs as go\n",
-    "\n",
-    "#importando bibliotecas para uso de datas\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "# Criando uma lista de países e intervalos de tempo\n",
+    "# Criando listas de países, principais ações e intervalos de tempo\n",
     "countries = [\"Brazil\", \"United States\"]\n",
     "intervals = [\"1d\", \"1wk\", \"1mo\"]\n",
     "\n",
-    "#criando uma função para formatar a data\n",
-    "def format_date(dt, format=\"%Y-%m-%d\"):\n",
-    "    return dt.strftime(format)\n",
+    "brazil_stocks = [\n",
+    "    \"ABEV3.SA\", \"B3SA3.SA\", \"BBAS3.SA\", \"BBDC3.SA\", \"BBDC4.SA\", \"BBSE3.SA\",\n",
+    "    \"BEEF3.SA\", \"BRAP4.SA\", \"BRFS3.SA\", \"BRKM5.SA\", \"BRML3.SA\", \"BTOW3.SA\",\n",
+    "    \"CCRO3.SA\", \"CIEL3.SA\", \"CMIG4.SA\", \"COGN3.SA\", \"CPFE3.SA\", \"CPLE6.SA\",\n",
+    "    \"CSAN3.SA\", \"CSNA3.SA\", \"CVCB3.SA\", \"CYRE3.SA\", \"ECOR3.SA\", \"EGIE3.SA\",\n",
+    "    \"ELET3.SA\", \"ELET6.SA\", \"EMBR3.SA\", \"ENBR3.SA\", \"ENGI11.SA\", \"EQTL3.SA\",\n",
+    "    \"EZTC3.SA\", \"FLRY3.SA\", \"GGBR4.SA\", \"GOAU4.SA\", \"GOLL4.SA\", \"HAPV3.SA\",\n",
+    "    \"HGTX3.SA\", \"HYPE3.SA\", \"IGTA3.SA\", \"IRBR3.SA\", \"ITSA4.SA\", \"ITUB4.SA\",\n",
+    "    \"JBSS3.SA\", \"KLBN11.SA\", \"LAME4.SA\", \"LIGT3.SA\", \"LINX3.SA\", \"LREN3.SA\",\n",
+    "    \"MGLU3.SA\", \"MRFG3.SA\", \"MRVE3.SA\", \"MULT3.SA\", \"NTCO3.SA\", \"PCAR3.SA\",\n",
+    "    \"PETR3.SA\", \"PETR4.SA\", \"QUAL3.SA\", \"RADL3.SA\", \"RAIL3.SA\", \"RENT3.SA\",\n",
+    "    \"SANB11.SA\", \"SBSP3.SA\", \"SULA11.SA\", \"SUZB3.SA\", \"TAEE11.SA\", \"TIMP3.SA\",\n",
+    "    \"TOTS3.SA\", \"UGPA3.SA\", \"USIM5.SA\", \"VALE3.SA\", \"VIVT3.SA\", \"VVAR3.SA\",\n",
+    "    \"WEGE3.SA\", \"YDUQ3.SA\"\n",
+    "]\n",
     "\n",
-    "#função de cache do streamlit para evitar redundância de dados\n",
+    "us_stocks = [\n",
+    "    \"AAPL\", \"MSFT\", \"GOOGL\", \"AMZN\", \"FB\", \"TSLA\", \"NVDA\", \"AMD\", \"NFLX\", \"BABA\",\n",
+    "    \"PYPL\", \"INTC\", \"CSCO\", \"ADBE\", \"CMCSA\", \"PFE\", \"JNJ\", \"MRNA\", \"BA\", \"DIS\",\n",
+    "    \"T\", \"VZ\", \"WMT\", \"XOM\", \"CVX\", \"PG\", \"KO\", \"PEP\", \"MCD\", \"NKE\", \"V\", \"MA\",\n",
+    "    \"JPM\", \"BAC\", \"C\", \"GS\", \"MS\", \"AMGN\", \"GILD\", \"CRM\", \"SQ\", \"UBER\", \"LYFT\",\n",
+    "    \"SPCE\", \"NKLA\", \"PLTR\", \"SNOW\", \"NIO\", \"XPEV\", \"LI\", \"ARKK\", \"SPY\", \"QQQ\",\n",
+    "    \"DIA\", \"IWM\", \"GME\", \"AMC\", \"BB\", \"NOK\", \"TLRY\", \"CGC\", \"ACB\", \"ZNGA\", \"SIRI\",\n",
+    "    \"EBAY\", \"TWTR\", \"ROKU\", \"PINS\", \"UBER\", \"LYFT\"\n",
+    "]\n",
+    "\n",
+    "# Criando um dicionário para associar a lista de ações ao país selecionado\n",
+    "stock_options = {\"United States\": us_stocks, \"Brazil\": brazil_stocks}\n",
+    "\n",
+    "# Função de cache do Streamlit para evitar redundância de dados\n",
     "@st.cache_data()\n",
-    "\n",
-    "#criando a função para consulta do usuário \n",
     "def consultar_acao(stock, from_date, to_date, interval):\n",
     "    return yf.download(stock, start=from_date, end=to_date, interval=interval, progress=False)\n",
     "\n",
-    "#criando uma função para formatar a data\n",
-    "def format_date(dt, format=\"%Y-%m-%d\"):\n",
-    "    return dt.strftime(format)\n",
-    "\n",
-    "#Criando o filtro para o usuário selecionar o intervalo de pesquisa desejado\n",
-    "start_date = datetime.now() - timedelta(days=30)\n",
-    "end_date = datetime.now()\n",
-    "\n",
-    "# função para exiblição dos gráficos\n",
+    "# Função para exibição dos gráficos\n",
     "def plotCandleStick(df, acao=\"ticket\"):\n",
     "    trace1 = {\n",
     "        \"x\": df.index,\n",
@@ -78,10 +85,8 @@
     "        \"name\": acao,\n",
     "        \"showlegend\": False,\n",
     "    }\n",
-    "\n",
     "    data = [trace1]\n",
     "    layout = go.Layout()\n",
-    "\n",
     "    return go.Figure(data=data, layout=layout)"
    ]
   },
@@ -98,18 +103,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#criando a barra lateral da página web com algumas ações pré-selecionadas\n",
+    "# Aplicando melhorias na barra lateral\n",
     "barra_lateral = st.sidebar.empty()\n",
-    "country_select = st.sidebar.selectbox(\"Escolha o país:\", countries)\n",
-    "stocks = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
-    "stock_select = st.sidebar.selectbox(\"Selecione a ação:\", stocks)\n",
-    "from_date = st.sidebar.date_input(\"Data Inicial:\", start_date)\n",
-    "to_date = st.sidebar.date_input(\"Data Final:\", end_date)\n",
-    "interval_select = st.sidebar.selectbox(\"Escolha o intervado de tempo desejado (d - dia wk - semana mo - mês):\", intervals)\n",
-    "carregar_dados = st.sidebar.checkbox(\"Carregar Dados\")\n",
     "\n",
-    "grafico_line = st.empty()\n",
-    "grafico_candle = st.empty()"
+    "# Atualizando a barra lateral para listar as ações de acordo com o país selecionado\n",
+    "country_select = st.sidebar.selectbox(\"Escolha o país:\", countries)\n",
+    "stocks = stock_options[country_select]  # Obtém as ações do país selecionado\n",
+    "stock_select = st.sidebar.selectbox(\"Selecione a ação:\", stocks)\n",
+    "\n",
+    "# Criando o filtro para o usuário selecionar o intervalo de pesquisa desejado\n",
+    "start_date = datetime.now() - timedelta(days=30)\n",
+    "end_date = datetime.now()\n",
+    "\n",
+    "from_date = st.sidebar.date_input(\"Data Inicial:\", start_date.date())\n",
+    "to_date = st.sidebar.date_input(\"Data Final:\", end_date.date())\n",
+    "\n",
+    "# Formata as datas no formato brasileiro (DD/MM/YYYY) apenas para exibição\n",
+    "formatted_start_date = from_date.strftime(\"%d/%m/%Y\")\n",
+    "formatted_end_date = to_date.strftime(\"%d/%m/%Y\")\n",
+    "st.write(f\"Data Inicial: {formatted_start_date}\")\n",
+    "st.write(f\"Data Final: {formatted_end_date}\")\n",
+    "\n",
+    "# Criando o restante da barra lateral\n",
+    "interval_select = st.sidebar.selectbox(\n",
+    "    \"Escolha o intervalo de tempo desejado (d - dia wk - semana mo - mês):\", intervals\n",
+    ")\n",
+    "carregar_dados = st.sidebar.checkbox(\"Carregar Dados\")"
    ]
   },
   {
@@ -129,10 +148,11 @@
     }
    ],
    "source": [
-    "# Definindo título e cabeçalhos para a Home Page\n",
-    "st.title(\"Análise Gráfica de Ações em Tempo Real\")\n",
-    "st.header(\"Ações\")\n",
-    "st.subheader(\"Análise Gráfica\")"
+    "# Exibindo o título com tamanho de fonte personalizado\n",
+    "st.markdown(\n",
+    "    \"<h1 style='font-size: 24px;'>Análise Gráfica de Ações em Tempo Real</h1>\",\n",
+    "    unsafe_allow_html=True,\n",
+    ")"
    ]
   },
   {
@@ -149,29 +169,20 @@
     }
    ],
    "source": [
-    "#função para definir o tempo de atualização da página que visa permitir\n",
-    "#a análise em tempo real\n",
+    "# Função para definir o tempo de atualização da página que visa permitir a análise em tempo real\n",
     "count = st_autorefresh(interval=5000, limit=10000, key=\"fizzbuzzcounter\")\n",
     "\n",
-    "# if count == 0:\n",
-    "#     st.write(\"Count is zero\")\n",
-    "# elif count % 3 == 0 and count % 5 == 0:\n",
-    "#     st.write(\"FizzBuzz\")\n",
-    "# elif count % 3 == 0:\n",
-    "#     st.write(\"Fizz\")\n",
-    "# elif count % 5 == 0:\n",
-    "#     st.write(\"Buzz\")\n",
-    "# else:\n",
-    "#     st.write(f\"Count: {count}\")\n",
-    "\n",
+    "# Verificação de datas e exibição de gráficos\n",
     "if from_date > to_date:\n",
     "    st.sidebar.error(\"A data inicial deve ser menor que a data final\")\n",
     "else:\n",
-    "    df = consultar_acao(stock_select, format_date(from_date), format_date(to_date), interval_select)\n",
+    "    df = consultar_acao(stock_select, from_date.strftime(\"%Y-%m-%d\"), to_date.strftime(\"%Y-%m-%d\"), interval_select)\n",
+    "    \n",
     "    try:\n",
     "        fig = plotCandleStick(df)\n",
+    "        grafico_candle = st.empty()\n",
     "        grafico_candle.plotly_chart(fig)\n",
-    "        # grafico_line.line_chart(df[\"Close\"])\n",
+    "        \n",
     "        if carregar_dados:\n",
     "            st.subheader(\"Data\")\n",
     "            st.dataframe(df)\n",
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook sprint3.ipynb to script\n",
-      "[NbConvertApp] Writing 3647 bytes to sprint3.py\n"
+      "[NbConvertApp] Writing 5041 bytes to sprint3.py\n"
      ]
     }
    ],
