concluindo a etapa 1 e 2 do trello da sprint 3

--- a/sprint3.ipynb
+++ b/sprint3.ipynb
@@ -208,6 +208,173 @@
     "#convertendo o script do jupyter notebook para python\n",
     "!jupyter nbconvert --to script sprint3.ipynb"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1. Validação de Entrada\n",
+    "Validação de datas para garantir que o intervalo seja razoável:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criando os valores padrões paras as datas\n",
+    "start_date = datetime.now() - timedelta(days=30)\n",
+    "end_date = datetime.now()\n",
+    "\n",
+    "# Configurando a interface de seleção de datas na barra lateral\n",
+    "from_date = st.sidebar.date_input(\"Data Inicial:\", start_date.date())\n",
+    "to_date = st.sidebar.date_input(\"Data Final:\", end_date.date())\n",
+    "\n",
+    "# Verificando se a data inicial é menor que a data final\n",
+    "if from_date > to_date:\n",
+    "    st.sidebar.error(\"A data inicial deve ser menor que a data final\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  2. Controle de Taxa (Rate Limiting) e Cache\n",
+    "Impedir múltiplas requisições em um curto espaço de tempo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para limitar requisições por tempo\n",
+    "def rate_limit_check(last_request_time, min_interval=5):\n",
+    "    current_time = time.time()\n",
+    "    if (current_time - last_request_time) < min_interval:\n",
+    "        raise ValueError(\"Requisições muito frequentes! Aguarde um momento.\")\n",
+    "    return current_time\n",
+    "\n",
+    "# Variável global para armazenar o tempo da última requisição\n",
+    "last_request_time = time.time()\n",
+    "\n",
+    "# Função para consultar ação com rate limiting e cache\n",
+    "@st.cache_data(ttl=3600)  # Cache válido por 1 hora\n",
+    "def consultar_acao(stock, from_date, to_date, interval):\n",
+    "    global last_request_time\n",
+    "    last_request_time = rate_limit_check(last_request_time)\n",
+    "    return yf.download(\n",
+    "        stock, start=from_date, end=to_date, interval=interval, progress=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3. Manejo de Exceções\n",
+    "Captura de erros com mensagens personalizadas:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    df = consultar_acao(stock_select, from_date, to_date, interval_select)\n",
+    "    fig = plotCandleStick(df)\n",
+    "    grafico_candle.plotly_chart(fig)\n",
+    "    if carregar_dados:\n",
+    "        st.subheader(\"Data\")\n",
+    "        st.dataframe(df)\n",
+    "except ValueError as ve:\n",
+    "    st.error(f\"Erro de Validação: {ve}\")\n",
+    "except KeyError as ke:\n",
+    "    st.error(f\"Erro ao acessar os dados: {ke}\")\n",
+    "except Exception as e:\n",
+    "    st.error(f\"Ocorreu um erro inesperado: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 4. Validação de Inputs\n",
+    "\n",
+    "Embora o Streamlit já lide com a entrada de dados de forma relativamente segura, é bom garantir que os dados recebidos sejam validados para evitar injeção de código malicioso.\n",
+    "\n",
+    "Garantindo que a ação selecionada esteja na lista permitida:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verificação se o ticker selecionado está na lista permitida\n",
+    "if stock_select not in stock_options[country_select]:\n",
+    "    st.sidebar.error(\"Ticker selecionado não é válido!\")\n",
+    "else:\n",
+    "    st.write(f\"Ação selecionada: {stock_select}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 6. Logs e Monitoramento\n",
+    "Implementação de logs:\n",
+    "\n",
+    "Implementação de logs para monitorar as atividades e detectar comportamentos anômalos, como acessos frequentes que possam indicar um ataque."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "# Configurando o logger\n",
+    "logging.basicConfig(filename='app.log', level=logging.INFO,\n",
+    "                    format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "\n",
+    "# registro de log\n",
+    "logging.info(\"Aplicação iniciada\")\n",
+    "try:\n",
+    "    df = consultar_acao(stock_select, from_date, to_date, interval_select)\n",
+    "    logging.info(f\"Consulta realizada com sucesso para {stock_select} no intervalo {from_date} - {to_date}\")\n",
+    "except Exception as e:\n",
+    "    logging.error(f\"Erro ao consultar dados: {e}\")\n",
+    "    st.error(f\"Ocorreu um erro ao consultar os dados: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 7. Manutenção e Atualização\n",
+    "\n",
+    "Agendar uma verificação regular se as bibliotecas utilizadas (como yfinance, streamlit, plotly, etc.) estão atualizadas para se beneficiar de melhorias de segurança e correções de bugs.\n",
+    "\n",
+    "Este item requer verificação manual regular de bibliotecas com o comando pip e deve ser testado antes do deploy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade yfinance streamlit plotly"
+   ]
   }
  ],
  "metadata": {
