--- a/sprint1.ipynb
+++ b/sprint1.ipynb
@@ -11,27 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pesquisar APIs de dados financeiros"
+    "#### Research Financial Data APIs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seguem abaixo as principais APIs para captura de dados financeiros:\n",
+    "Below are the main APIs for capturing financial data:\n",
     "\n",
     "1. Alpha Vantage:\n",
     "\n",
-    "Oferece dados financeiros globais, incluindo ações, forex, criptomoedas e indicadores econômicos. Possui uma API gratuita com limites de uso.\n",
+    "Provides global financial data, including stocks, forex, cryptocurrencies, and economic indicators. Offers a free API with usage limits.\n",
     "\n",
-    "Biblioteca Python: alpha_vantage"
+    "Python Library: alpha_vantage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### exemplo de uso do Alpha Vantage"
+    "##### Alpha Vantage Usage Example"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "from alpha_vantage.timeseries import TimeSeries # type: ignore\n",
     "\n",
-    "ts = TimeSeries(key='sua_chave_api')\n",
+    "ts = TimeSeries(key='your_api_key')\n",
     "data, meta_data = ts.get_intraday(symbol='PETR4.SA', interval='1min', outputsize='full')\n"
    ]
   },
@@ -52,16 +52,16 @@
    "source": [
     "2. IEX Cloud:\n",
     "\n",
-    "Disponibiliza dados financeiros globais, com uma API gratuita e planos pagos para dados mais avançados.\n",
+    "Offers global financial data, with a free API and paid plans for more advanced data.\n",
     "\n",
-    "Biblioteca Python: iexfinance"
+    "Python Library: iexfinance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### exemplo de uso do IEX Cloud"
+    "##### IEX Cloud Usage Example"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "source": [
     "from iexfinance.stocks import Stock\n",
     "\n",
-    "stock = Stock(\"AAPL\", token=\"sua_chave_api\")\n",
+    "stock = Stock(\"AAPL\", token=\"your_api_key\")\n",
     "data = stock.get_quote()\n"
    ]
   },
@@ -82,16 +82,16 @@
    "source": [
     "3. Quandl:\n",
     "\n",
-    "Oferece uma vasta gama de dados financeiros, incluindo ações, moedas, commodities e indicadores econômicos. Possui planos gratuitos e pagos.\n",
+    "Provides a vast range of financial data, including stocks, currencies, commodities, and economic indicators. Offers free and paid plans.\n",
     "\n",
-    "Biblioteca Python: quandl"
+    "Python Library: quandl"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### exemplo de uso do Quandl"
+    "##### Quandl Usage Example"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "source": [
     "import quandl\n",
     "\n",
-    "quandl.ApiConfig.api_key = 'sua_chave_api'\n",
+    "quandl.ApiConfig.api_key = 'your_api_key'\n",
     "data = quandl.get(\"WIKI/GOOGL\")\n"
    ]
   },
@@ -112,16 +112,16 @@
    "source": [
     "4. Yahoo Finance:\n",
     "\n",
-    "Muito popular para dados históricos e atuais de ações, criptomoedas e outras informações financeiras.\n",
+    "Popular for historical and current data on stocks, cryptocurrencies, and other financial information.\n",
     "\n",
-    "Biblioteca Python: yfinance"
+    "Python Library: yfinance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### exemplo de uso do Yahoo Finance"
+    "##### Yahoo Finance Usage Example"
    ]
   },
   {
@@ -141,16 +141,16 @@
    "source": [
     "5. B3 API:\n",
     "\n",
-    "A B3 (Bolsa de Valores do Brasil) oferece algumas APIs para acesso a dados financeiros. Embora algumas sejam pagas, há informações públicas disponíveis.\n",
+    "B3 (Brazil Stock Exchange) provides some APIs for financial data access. Although some are paid, public information is available.\n",
     "\n",
-    "Não possui uma biblioteca oficial em Python, mas você pode usar requests para fazer chamadas HTTP."
+    "No official Python library, but you can use requests for HTTP calls."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### exemplo de uso do B3 API"
+    "##### B3 API Usage Example"
    ]
   },
   {
@@ -172,16 +172,16 @@
    "source": [
     "6. Investing.com:\n",
     "\n",
-    "Oferece dados de mercado de vários países, incluindo o Brasil. Para acessar a API, geralmente é necessário web scraping.\n",
+    "Offers market data from various countries, including Brazil. API access usually requires web scraping.\n",
     "\n",
-    "Biblioteca Python: investpy (mas verifique se ainda está funcionando, pois houve bloqueios recentes)."
+    "Python Library: investpy (verify functionality due to recent restrictions)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### exemplo de uso do Investing.com"
+    "##### Investing.com Usage Example"
    ]
   },
   {
@@ -202,35 +202,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Configurar o ambiente para desenvolvimento e testes"
+    "#### Set Up Development Environment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para o ambiente de desenvolvimento optei por utilizar o sistema operacional Windows 11, para escrita do código utilizei o Visual Studio Code (VScode) com a extensão do Jupyter Notebook e do python como linguagem de programação, conforme imagens abaixo:"
+    "For the development environment, I chose Windows 11 OS and used Visual Studio Code (VScode) with Jupyter Notebook and Python extensions, as shown below:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para controle de versão estou utilizando o git com Github gerenciado através de linha de comando com o Cmder conforme imagens abaixo:"
+    "For version control, I used Git with GitHub, managed through command line using Cmder, as shown below:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Configurar o ambiente para desenvolvimento e testes"
+    "#### Configure Development and Testing Environment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Para criação da interface do usuário utilizaremos o Framework python Streamlit"
+    "#### For UI creation, we will use the Streamlit Python framework"
    ]
   },
   {
@@ -239,10 +239,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importando a biblioteca streamlit e atribuindo o apelido \"st\"\n",
+    "# Importing the Streamlit library and assigning the alias 'st'\n",
     "import streamlit as st  # type: ignore\n",
     "\n",
-    "#bliblioteca responsável pela atualização automática da página web\n",
+    "# Library for automatic web page refresh\n",
     "from streamlit_autorefresh import st_autorefresh # type: ignore"
    ]
   },
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Optei em utilizar o Yahoo Finance por sua flexibilidade e por ser gratuito, sendo uma excelente opção para criação do protótipo, na minha opinião."
+    "##### I chose to use Yahoo Finance for its flexibility and because it’s free, making it an excellent option for the prototype."
    ]
   },
   {
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importando a biblioteca do yahoo finance\n",
+    "# Importing the Yahoo Finance library\n",
     "import yfinance as yf"
    ]
   },
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importando bibliotecas para uso de datas\n",
+    "# Importing date libraries\n",
     "from datetime import datetime, timedelta"
    ]
   },
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importando blibliotecas para exibir gráficos para testes\n",
+    "# Importing libraries for testing graphs\n",
     "import plotly.graph_objs as go"
    ]
   },
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Criando o script inicial da aplicação e realizando testes"
+    "##### Creating the initial application script and conducting tests"
    ]
   },
   {
@@ -296,9 +296,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lista de países e intervalos de tempo\n",
+    "# List of countries and time intervals\n",
     "countries = [\"Brazil\", \"United States\"]\n",
-    "intervals = [\"1d\", \"1wk\", \"1mo\"]  # d - dia wk - semana mo - mês"
+    "intervals = [\"1d\", \"1wk\", \"1mo\"]  # d - day wk - week mo - month"
    ]
   },
   {
@@ -307,7 +307,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Criando o filtro para o usuário selecionar o intervalo de pesquisa desejado\n",
+    "# Creating a filter for the user to select the desired search range\n",
+    "start_date = datetime.now() - timedelta(days=30)\n",
+    "end_date = datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+
+```json
+{
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a filter for the user to select the desired search range\n",
     "start_date = datetime.now() - timedelta(days=30)\n",
     "end_date = datetime.now()"
    ]
@@ -326,10 +341,10 @@
     }
    ],
    "source": [
-    "#função de cache do streamlit para evitar redundância de dados\n",
+    "# Streamlit cache function to avoid data redundancy\n",
     "@st.cache_data()\n",
     "\n",
-    "#criando a função para consulta do usuário \n",
+    "# Creating the function for user query\n",
     "def consultar_acao(stock, from_date, to_date, interval):\n",
     "    return yf.download(stock, start=from_date, end=to_date, interval=interval, progress=False)"
    ]
@@ -340,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#criando uma função para formatar a data\n",
+    "# Creating a function to format the date\n",
     "def format_date(dt, format=\"%Y-%m-%d\"):\n",
     "    return dt.strftime(format)"
    ]
@@ -351,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# função que cria um grafo para teste de consulta e tempo de retorno\n",
+    "# Function to create a test graph for query and return time\n",
     "def plotCandleStick(df, acao=\"ticket\"):\n",
     "    trace1 = {\n",
     "        \"x\": df.index,\n",
@@ -389,18 +404,18 @@
     }
    ],
    "source": [
-    "#criando a barra lateral da página web com algumas ações pré-selecionadas\n",
-    "barra_lateral = st.sidebar.empty()\n",
+    "# Creating the sidebar of the web page with some pre-selected stocks\n",
+    "sidebar = st.sidebar.empty()\n",
     "country_select = st.sidebar.selectbox(\"Select country:\", countries)\n",
-    "stocks = [\"AAPL\", \"MSFT\", \"GOOGL\"]  # Example stocks, replace with your stock list\n",
+    "stocks = [\"AAPL\", \"MSFT\", \"GOOGL\"]  # Example stocks\n",
     "stock_select = st.sidebar.selectbox(\"Select the stock:\", stocks)\n",
     "from_date = st.sidebar.date_input(\"Start Date:\", start_date)\n",
     "to_date = st.sidebar.date_input(\"End Date:\", end_date)\n",
     "interval_select = st.sidebar.selectbox(\"Select the range:\", intervals)\n",
-    "carregar_dados = st.sidebar.checkbox(\"Load Data\")\n",
+    "load_data = st.sidebar.checkbox(\"Load Data\")\n",
     "\n",
-    "grafico_line = st.empty()\n",
-    "grafico_candle = st.empty()"
+    "chart_line = st.empty()\n",
+    "chart_candle = st.empty()"
    ]
   },
   {
@@ -420,10 +435,10 @@
     }
    ],
    "source": [
-    "# Definindo título e cabeçalhos iniciais para a Home Page\n",
-    "st.title(\"Análise Gráfica de Ações em Tempo Real\")\n",
-    "st.header(\"Ações\")\n",
-    "st.subheader(\"Análise Gráfica\")"
+    "# Setting title and headers for the Home Page\n",
+    "st.title(\"Real-Time Stock Analysis\")\n",
+    "st.header(\"Stocks\")\n",
+    "st.subheader(\"Graphical Analysis\")"
    ]
   },
   {
@@ -440,8 +455,7 @@
     }
    ],
    "source": [
-    "#função para definir o tempo de atualização da página que visa permitir\n",
-    "#a análise em tempo real\n",
+    "# Page refresh function to allow real-time analysis\n",
     "count = st_autorefresh(interval=5000, limit=10000, key=\"fizzbuzzcounter\")\n",
     "\n",
     "if count == 0:\n",
@@ -461,9 +475,9 @@
     "    df = consultar_acao(stock_select, format_date(from_date), format_date(to_date), interval_select)\n",
     "    try:\n",
     "        fig = plotCandleStick(df)\n",
-    "        grafico_candle.plotly_chart(fig)\n",
-    "        grafico_line.line_chart(df[\"Close\"])\n",
-    "        if carregar_dados:\n",
+    "        chart_candle.plotly_chart(fig)\n",
+    "        chart_line.line_chart(df[\"Close\"])\n",
+    "        if load_data:\n",
     "            st.subheader(\"Data\")\n",
     "            st.dataframe(df)\n",
     "    except Exception as e:\n",
@@ -474,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Criaremos agora o servidor local do streamlit "
+    "##### Now we'll create the Streamlit local server"
    ]
   },
   {
@@ -483,10 +497,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Para converter um script de Jupyter Notebook (.ipynb) para um script Python\n",
-    "#(.py), utilizaremos a ferramenta nbconvert que faz parte do Jupyter.\n",
+    "# To convert a Jupyter Notebook (.ipynb) script to a Python script (.py), we'll use nbconvert, a Jupyter tool.\n",
     "\n",
-    "#utilizaremos o gerenciador de pacotes \"pip\" para instalação do jupyter\n",
+    "# We will use the package manager \"pip\" to install jupyter\n",
     "!pip install jupyter\n"
    ]
   },
@@ -496,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convertendo o script do jupyter notebook para python\n",
+    "# Converting the Jupyter notebook script to Python\n",
     "!jupyter nbconvert --to script sprint1.ipynb"
    ]
   },
@@ -504,29 +517,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Para isso deveremos utilizar o comando # sreamlit run sprint1.py no terminal"
+    "###### We will use the command # streamlit run sprint1.py in the terminal to run it."
    ]
   }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+ ]
 }
