--- a/sprint1.ipynb
+++ b/sprint1.ipynb
@@ -11,27 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Research Financial Data APIs"
+    "#### Pesquisar APIs de dados financeiros"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are the main APIs for capturing financial data:\n",
+    "Seguem abaixo as principais APIs para captura de dados financeiros:\n",
     "\n",
     "1. Alpha Vantage:\n",
     "\n",
-    "Provides global financial data, including stocks, forex, cryptocurrencies, and economic indicators. Offers a free API with usage limits.\n",
+    "Oferece dados financeiros globais, incluindo ações, forex, criptomoedas e indicadores econômicos. Possui uma API gratuita com limites de uso.\n",
     "\n",
-    "Python Library: alpha_vantage"
+    "Biblioteca Python: alpha_vantage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Alpha Vantage Usage Example"
+    "##### exemplo de uso do Alpha Vantage"
    ]
   },
   {
@@ -40,8 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from alpha_vantage.timeseries import TimeSeries\n",
-    "ts = TimeSeries(key='your_api_key')\n",
+    "from alpha_vantage.timeseries import TimeSeries # type: ignore\n",
+    "\n",
+    "ts = TimeSeries(key='sua_chave_api')\n",
     "data, meta_data = ts.get_intraday(symbol='PETR4.SA', interval='1min', outputsize='full')\n"
    ]
   },
@@ -51,16 +52,16 @@
    "source": [
     "2. IEX Cloud:\n",
     "\n",
-    "Provides global financial data, with a free API and paid plans for more advanced data.\n",
+    "Disponibiliza dados financeiros globais, com uma API gratuita e planos pagos para dados mais avançados.\n",
     "\n",
-    "Python Library: iexfinance"
+    "Biblioteca Python: iexfinance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### IEX Cloud Usage Example"
+    "##### exemplo de uso do IEX Cloud"
    ]
   },
   {
@@ -70,7 +71,8 @@
    "outputs": [],
    "source": [
     "from iexfinance.stocks import Stock\n",
-    "stock = Stock('AAPL', token='your_api_key')\n",
+    "\n",
+    "stock = Stock(\"AAPL\", token=\"sua_chave_api\")\n",
     "data = stock.get_quote()\n"
    ]
   },
@@ -80,16 +82,16 @@
    "source": [
     "3. Quandl:\n",
     "\n",
-    "Offers a vast range of financial data, including stocks, currencies, commodities, and economic indicators.\n",
+    "Oferece uma vasta gama de dados financeiros, incluindo ações, moedas, commodities e indicadores econômicos. Possui planos gratuitos e pagos.\n",
     "\n",
-    "Python Library: quandl"
+    "Biblioteca Python: quandl"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Quandl Usage Example"
+    "##### exemplo de uso do Quandl"
    ]
   },
   {
@@ -99,8 +101,9 @@
    "outputs": [],
    "source": [
     "import quandl\n",
-    "quandl.ApiConfig.api_key = 'your_api_key'\n",
-    "data = quandl.get('WIKI/GOOGL')\n"
+    "\n",
+    "quandl.ApiConfig.api_key = 'sua_chave_api'\n",
+    "data = quandl.get(\"WIKI/GOOGL\")\n"
    ]
   },
   {
@@ -109,16 +112,16 @@
    "source": [
     "4. Yahoo Finance:\n",
     "\n",
-    "Popular for historical and current data on stocks, cryptocurrencies, and other financial information.\n",
+    "Muito popular para dados históricos e atuais de ações, criptomoedas e outras informações financeiras.\n",
     "\n",
-    "Python Library: yfinance"
+    "Biblioteca Python: yfinance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Yahoo Finance Usage Example"
+    "##### exemplo de uso do Yahoo Finance"
    ]
   },
   {
@@ -128,6 +131,7 @@
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
+    "\n",
     "data = yf.download('PETR4.SA', start='2021-01-01', end='2021-12-31')\n"
    ]
   },
@@ -137,14 +141,16 @@
    "source": [
     "5. B3 API:\n",
     "\n",
-    "Provides financial data via HTTP requests (no official Python library)."
+    "A B3 (Bolsa de Valores do Brasil) oferece algumas APIs para acesso a dados financeiros. Embora algumas sejam pagas, há informações públicas disponíveis.\n",
+    "\n",
+    "Não possui uma biblioteca oficial em Python, mas você pode usar requests para fazer chamadas HTTP."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### B3 API Usage Example"
+    "##### exemplo de uso do B3 API"
    ]
   },
   {
@@ -154,7 +160,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "url = 'https://api.b3.com.br/data/endpoint'\n",
+    "\n",
+    "url = \"https://api.b3.com.br/data/endpoint\"\n",
     "response = requests.get(url)\n",
     "data = response.json()\n"
    ]
@@ -163,14 +170,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set Up Development Environment"
+    "6. Investing.com:\n",
+    "\n",
+    "Oferece dados de mercado de vários países, incluindo o Brasil. Para acessar a API, geralmente é necessário web scraping.\n",
+    "\n",
+    "Biblioteca Python: investpy (mas verifique se ainda está funcionando, pois houve bloqueios recentes)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For development, I used Windows 11 OS, Visual Studio Code with Jupyter Notebook and Python extensions."
+    "##### exemplo de uso do Investing.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import investpy\n",
+    "\n",
+    "data = investpy.get_stock_historical_data(stock='PETR4',\n",
+    "                                          country='brazil',\n",
+    "                                          from_date='01/01/2021',\n",
+    "                                          to_date='31/12/2021')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Configurar o ambiente para desenvolvimento e testes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para o ambiente de desenvolvimento optei por utilizar o sistema operacional Windows 11, para escrita do código utilizei o Visual Studio Code (VScode) com a extensão do Jupyter Notebook e do python como linguagem de programação, conforme imagens abaixo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para controle de versão estou utilizando o git com Github gerenciado através de linha de comando com o Cmder conforme imagens abaixo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Configurar o ambiente para desenvolvimento e testes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Para criação da interface do usuário utilizaremos o Framework python Streamlit"
    ]
   },
   {
@@ -179,15 +239,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import streamlit as st\n",
-    "from streamlit_autorefresh import st_autorefresh"
+    "#importando a biblioteca streamlit e atribuindo o apelido \"st\"\n",
+    "import streamlit as st  # type: ignore\n",
+    "\n",
+    "#bliblioteca responsável pela atualização automática da página web\n",
+    "from streamlit_autorefresh import st_autorefresh # type: ignore"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### I used Yahoo Finance due to its flexibility and being free, making it an excellent choice for prototyping."
+    "##### Optei em utilizar o Yahoo Finance por sua flexibilidade e por ser gratuito, sendo uma excelente opção para criação do protótipo, na minha opinião."
    ]
   },
   {
@@ -196,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importando a biblioteca do yahoo finance\n",
     "import yfinance as yf"
    ]
   },
@@ -205,6 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importando bibliotecas para uso de datas\n",
     "from datetime import datetime, timedelta"
    ]
   },
@@ -214,7 +279,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importando blibliotecas para exibir gráficos para testes\n",
     "import plotly.graph_objs as go"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Criando o script inicial da aplicação e realizando testes"
    ]
   },
   {
@@ -223,8 +296,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = ['Brazil', 'United States']\n",
-    "intervals = ['1d', '1wk', '1mo']"
+    "# Lista de países e intervalos de tempo\n",
+    "countries = [\"Brazil\", \"United States\"]\n",
+    "intervals = [\"1d\", \"1wk\", \"1mo\"]  # d - dia wk - semana mo - mês"
    ]
   },
   {
@@ -233,6 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Criando o filtro para o usuário selecionar o intervalo de pesquisa desejado\n",
     "start_date = datetime.now() - timedelta(days=30)\n",
     "end_date = datetime.now()"
    ]
@@ -241,18 +316,165 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-29 08:07:28.614 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
+     ]
+    }
+   ],
+   "source": [
+    "#função de cache do streamlit para evitar redundância de dados\n",
+    "@st.cache_data()\n",
+    "\n",
+    "#criando a função para consulta do usuário \n",
+    "def consultar_acao(stock, from_date, to_date, interval):\n",
+    "    return yf.download(stock, start=from_date, end=to_date, interval=interval, progress=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "@st.cache_data()\n",
-    "def consultar_acao(stock, from_date, to_date, interval):\n",
-    "    return yf.download(stock, start=from_date, end=to_date, interval=interval)"
+    "#criando uma função para formatar a data\n",
+    "def format_date(dt, format=\"%Y-%m-%d\"):\n",
+    "    return dt.strftime(format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# função que cria um grafo para teste de consulta e tempo de retorno\n",
+    "def plotCandleStick(df, acao=\"ticket\"):\n",
+    "    trace1 = {\n",
+    "        \"x\": df.index,\n",
+    "        \"open\": df[\"Open\"],\n",
+    "        \"close\": df[\"Close\"],\n",
+    "        \"high\": df[\"High\"],\n",
+    "        \"low\": df[\"Low\"],\n",
+    "        \"type\": \"candlestick\",\n",
+    "        \"name\": acao,\n",
+    "        \"showlegend\": False,\n",
+    "    }\n",
+    "\n",
+    "    data = [trace1]\n",
+    "    layout = go.Layout()\n",
+    "\n",
+    "    return go.Figure(data=data, layout=layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-29 08:14:09.368 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run c:\\Users\\vasco\\anaconda3\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n",
+      "2024-07-29 08:14:09.370 Session state does not function when running a script without `streamlit run`\n"
+     ]
+    }
+   ],
+   "source": [
+    "#criando a barra lateral da página web com algumas ações pré-selecionadas\n",
+    "barra_lateral = st.sidebar.empty()\n",
+    "country_select = st.sidebar.selectbox(\"Select country:\", countries)\n",
+    "stocks = [\"AAPL\", \"MSFT\", \"GOOGL\"]  # Example stocks, replace with your stock list\n",
+    "stock_select = st.sidebar.selectbox(\"Select the stock:\", stocks)\n",
+    "from_date = st.sidebar.date_input(\"Start Date:\", start_date)\n",
+    "to_date = st.sidebar.date_input(\"End Date:\", end_date)\n",
+    "interval_select = st.sidebar.selectbox(\"Select the range:\", intervals)\n",
+    "carregar_dados = st.sidebar.checkbox(\"Load Data\")\n",
+    "\n",
+    "grafico_line = st.empty()\n",
+    "grafico_candle = st.empty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeltaGenerator()"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Definindo título e cabeçalhos iniciais para a Home Page\n",
+    "st.title(\"Análise Gráfica de Ações em Tempo Real\")\n",
+    "st.header(\"Ações\")\n",
+    "st.subheader(\"Análise Gráfica\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-29 08:18:18.939 No runtime found, using MemoryCacheStorageManager\n"
+     ]
+    }
+   ],
+   "source": [
+    "#função para definir o tempo de atualização da página que visa permitir\n",
+    "#a análise em tempo real\n",
+    "count = st_autorefresh(interval=5000, limit=10000, key=\"fizzbuzzcounter\")\n",
+    "\n",
+    "if count == 0:\n",
+    "    st.write(\"Count is zero\")\n",
+    "elif count % 3 == 0 and count % 5 == 0:\n",
+    "    st.write(\"FizzBuzz\")\n",
+    "elif count % 3 == 0:\n",
+    "    st.write(\"Fizz\")\n",
+    "elif count % 5 == 0:\n",
+    "    st.write(\"Buzz\")\n",
+    "else:\n",
+    "    st.write(f\"Count: {count}\")\n",
+    "\n",
+    "if from_date > to_date:\n",
+    "    st.sidebar.error(\"Start Date greater than End Date\")\n",
+    "else:\n",
+    "    df = consultar_acao(stock_select, format_date(from_date), format_date(to_date), interval_select)\n",
+    "    try:\n",
+    "        fig = plotCandleStick(df)\n",
+    "        grafico_candle.plotly_chart(fig)\n",
+    "        grafico_line.line_chart(df[\"Close\"])\n",
+    "        if carregar_dados:\n",
+    "            st.subheader(\"Data\")\n",
+    "            st.dataframe(df)\n",
+    "    except Exception as e:\n",
+    "        st.error(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Creating the initial Streamlit app"
+    "##### Criaremos agora o servidor local do streamlit "
    ]
   },
   {
@@ -261,10 +483,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.title('Real-Time Stock Analysis')\n",
-    "st.header('Stocks')\n",
-    "st.subheader('Graphical Analysis')"
+    "#Para converter um script de Jupyter Notebook (.ipynb) para um script Python\n",
+    "#(.py), utilizaremos a ferramenta nbconvert que faz parte do Jupyter.\n",
+    "\n",
+    "#utilizaremos o gerenciador de pacotes \"pip\" para instalação do jupyter\n",
+    "!pip install jupyter\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convertendo o script do jupyter notebook para python\n",
+    "!jupyter nbconvert --to script sprint1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Para isso deveremos utilizar o comando # sreamlit run sprint1.py no terminal"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
